use external zk for hbase